Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- #1343 sessions have been replaced by cookies to store transient information.
- cps-3.3 is no longuer set as default (since 'default' is already the default
  theme) in the 'cps3' profile
- #1369: "Unused portlets" page was broken
- part of #1290: remove empty space in folder_view -> move contentwell templet
  above main_content templet
- #1358: replaced RSS templet/portlet with a WAI templet/portlet
- #1392: Main Content Templet was not rendered inside cell block in macroless
         mode. The templet was not visible in editing mode either.
- #1315: enabled visibility creteria for Plone2 w/ Linguaplone
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- added extension profile for CPS3
- the effective theme and page information is cached in the REQUEST
- the portlet cache is cleared when exiting the theme manager.