@@ -2,6 +2,7 @@
 <object name="portal_themes" meta_type="Portal Themes Tool">
  <property name="accesskey">*</property>
  <property name="debug_mode">False</property>
+ <property name="method_themes"/>
  <object name="default" meta_type="Portal Theme"/>
  <object name="lightskins" meta_type="Portal Theme"/>
  <object name="autumn" meta_type="Portal Theme"/>
